[metadata]
description-file = README.rst
long_description = file: README.md
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.7, <=3.10
packages = 
    pyqubo
    pyqubo.integer
    pyqubo.utils
test_suite = tests
setup_requires =
    cmake >=3.20.5
    pip >=19.3',
    setuptools >=57.1.0
    wheel >=0.36.2
    build >=0.5.1
    ninja; sys_platform != 'win32' and platform_machine != 'arm64'
    numpy >=1.17.3, <=1.20.0
    Cython>=0.29.24

install_requires =
    numpy >=1.17.3
    dimod >=0.9.14
    dwave-neal >=0.5.7
    Deprecated >=1.2.12
    six >=1.15.0
    
tests_require =
    pytest
    pytest-mock
    pytest-cov
    pytest-html
    coverage >=4.5.1
    codecov >=2.1.9

[install_lib]
optimize = 2
compile = 1

[aliases]
test=pytest 

[tool:pytest]
addopts = --cov cchan_web --cov-report html --cov-config .coveragerc
console_output_style = count
log_auto_indent = true
testpaths = tests
